--- a/index.Rmd
+++ b/index.Rmd
@@ -1,13 +1,14 @@
 ---
 title: "About Me"
 ---
-  
+
+`r library(icon)`
 <center>
-# Hi, I'm Catherine.
+# Hi, I'm Catherine `r fa('exclamation', color = "blue", size = 2)`
 
 </center>
 
-`r fa("exclamation-circle")` I'm in my last year pursuing a Bachelor’s Degree in Statistics and Data Science at the University of California at Santa Barbara (UCSB).  I am currently exploring a minor in Spatial Studies.
+ I'm in my last year pursuing a Bachelor’s Degree in Statistics and Data Science at the University of California at Santa Barbara (UCSB).  I am currently exploring a minor in Spatial Studies.
 
 I enjoy open water swimming, dogs and riding my bike to class. I dearly miss being on Campus.
 
