--- a/geog176A.Rmd
+++ b/geog176A.Rmd
@@ -2,17 +2,19 @@
 title: "GIS work"
 ---
 
-<space>
+<br>
 
-#### In summer 2020, I took an R based GIS course - Geography 176A (Intro to Geographic Information Systems and Science) 
+#### In summer 2020, I took an R based GIS course (Geography 176A - Intro to Geographic Information Systems and Science).
 
 Here is the collection of links for completed assignments: 
+<br>
 
 ## [Building a project website](https://github.com/catherinerauch/catherinerauch.github.io)
 
 - In this assignment we built a user site with GitHub
 - It includes a default page ('About Me') and a projects page (repo with access to code) 
 - Use of themes and icons on a webpage was explored
+<br>
 
 ## [Analysis of COVID-19 data](https://catherinerauch.github.io/geog-176A-labs/lab-02.html)
 
