--- a/projects.Rmd
+++ b/projects.Rmd
@@ -5,7 +5,7 @@ title: "Projects"
 <br>
 
 
-###Time Series Analysis and Forecast of Southern Resident Killer Whale (SRKW) Sightings
+### Time Series Analysis and Forecast of Southern Resident Killer Whale (SRKW) Sightings
 ```{r, echo=FALSE, out.width="45%",out.height="20%",fig.cap="   ",fig.show='hold',fig.align='left'}
 knitr::include_graphics(c("img/killerwhales3.jpg", "img/whaleforecast.png"))
 ``` 
@@ -29,4 +29,4 @@ This report uses 10 seasons of “Shark Tank” to examine the breakdown of pitc
 ```{r, echo=FALSE, out.width="75%",out.height="75%",fig.cap="   ",fig.show='hold',fig.align='left'}
 knitr::include_graphics(c("img/mammaplot.png"))
 ```
-This project investigates the link between brain/body weight, life span, gestation time, time spent sleeping/dreaming, and predation/danger indices for 62 species of mammals. The raw data was cleaned and relationships were explored in a scatterplot matrix. While attempting to determine which variables were significant in predicating Time Spent Dreaming, high influence and leverage points were found and multiple models were fit before selecting the best with AIC. To predict total time spent dreaming step-wise regression was preformed.
+This project investigates the link between brain/body weight, life span, gestation time, time spent sleeping/dreaming, and predation/danger indices for 62 species of mammals. The raw data was cleaned and relationships were explored in a scatterplot matrix. While attempting to determine which variables were significant in predicting time spent dreaming, high influence and leverage points were found and multiple models were fit before selecting the best with AIC. To predict total time spent dreaming step-wise regression was preformed.
