--- a/index.Rmd
+++ b/index.Rmd
@@ -13,10 +13,7 @@ I'm in my last year pursuing a Bachelor’s Degree in Statistics and Data Scienc
 ```{r, echo=FALSE, out.width="49%",out.height="20%",fig.cap="   ",fig.show='hold',fig.align='left'}
 knitr::include_graphics(c("img/OsakaCastle.jpg","img/JapaneseMaple.jpg"))
 ``` 
-In my free time I travel [photographing](https://vsco.co/catttrauc/gallery) landscapes and marine life.
+In my free time I travel and like to take [photos](https://vsco.co/catttrauc/gallery). Born and raised in Northern California, I'm a big sports fan and religiously follow the San Jose Sharks. But, I can also be spotted at Warriors and Giants games.
 <br>
 
-Born and raised in Northern California, I'm a big sports fan and religiously follow the San Jose Sharks. But, I can also be spotted at Warriors and Giants games.
-<br>
-
-I enjoy open water swimming and tailoring my projects to my interests, take a [look](https://catherinerauch.github.io/projects.html)!
+I enjoy tailoring my projects to my interests, take a [look](https://catherinerauch.github.io/projects.html)!
