--- a/geog176A.Rmd
+++ b/geog176A.Rmd
@@ -4,15 +4,16 @@ title: "GIS work"
 
 <br>
 
-#### In summer 2020, I took an R based GIS course (Geography 176A - Intro to Geographic Information Systems and Science).
+##### In summer 2020, I took an R based GIS course (Geography 176A - Intro to Geographic Information Systems and Science).
 
 Here is the collection of links for completed assignments: 
+<br>
 <br>
 
 ## [Exploration of US city data](https://catherinerauch.github.io/geog-176A-labs/lab-03.html)
 
 - In this lab we explored working with sf, sfc, and sfg features & objects
-- Coordinate transformations and calculations were made to visual distances between cities and borders
+- Coordinate transformations and calculations were made to visualize distances between cities and borders
 - Ggplot, gghighlight, and ggrepel were used to create graphics that are clear and interesting 
 <br>
 
