link for lab updates

--- a/geog176A.Rmd
+++ b/geog176A.Rmd
@@ -8,9 +8,38 @@ title: "GIS work"
 
 Here is the collection of links for completed assignments: 
 
+> ## [Creating a FIM with Flood Data from Mission Creek](https://catherinerauch.github.io/geog-176A-labs/lab-06.html)
+
+```{r, echo=FALSE, out.width="40%",out.height="30%",fig.cap="  ",fig.align='left'}
+knitr::include_graphics(c("img/lab06plot.png"))
+```
+
+- In this lab we estimated the number of buildings impacted in the 2017 Santa Barbara flood
+
+- Data was load into R using Web APIs and the whitebox frontend was used to create a partial Flood Inudation Map (FIM) with structural damage assessment.
 
 
-## [Impact of the MAUP on National Dam Inventory data](https://catherinerauch.github.io/geog-176A-labs/lab-04.html)
+***
+
+> ## [Examination and Visualization of 2016 Palo, Iowa Flood Data](https://catherinerauch.github.io/geog-176A-labs/lab-05.html)
+
+```{r, echo=FALSE, out.width="40%",out.height="30%",fig.cap="  ",fig.align='left'}
+knitr::include_graphics(c("img/lab5plot.png"))
+```
+
+- In this lab we created multiband raster files to detect/analyze a flood event
+
+- Raster manipulation was used to threshold and classify data to be analysed
+
+- Flood data from 2016 Palo, Iowa was graphed and examined
+
+***
+
+> ## [Impact of the MAUP on National Dam Inventory data](https://catherinerauch.github.io/geog-176A-labs/lab-04.html)
+
+```{r, echo=FALSE, out.width="50%",out.height="40%",fig.cap="   ",fig.align='left'}
+knitr::include_graphics("img/lab4plot.png")
+```
 
 - In this lab we examined the impacts of different tessellated surfaces and the modifiable areal unit problem (MAUP) 
 - Point-in-polygon counts were calculated to aggregate point data and visualize the distribution of dams over the US
@@ -18,7 +47,12 @@ Here is the collection of links for completed assignments:
 
 ***
 
-## [Exploration of US city data](https://catherinerauch.github.io/geog-176A-labs/lab-03.html)
+> ## [Exploration of US city data](https://catherinerauch.github.io/geog-176A-labs/lab-03.html)
+
+```{r, echo=FALSE, out.width="50%",out.height="40%",fig.cap="   ",fig.align='left'}
+knitr::include_graphics("img/CopyofUSthememap.jpg")
+```
+
 
 - In this lab we explored working with sf, sfc, and sfg features & objects
 - Coordinate transformations and calculations were made to visualize distances between cities and borders
@@ -26,7 +60,12 @@ Here is the collection of links for completed assignments:
 
 ***
 
-## [Analysis of COVID-19 data](https://catherinerauch.github.io/geog-176A-labs/lab-02.html)
+> ## [Analysis of COVID-19 data](https://catherinerauch.github.io/geog-176A-labs/lab-02.html)
+
+```{r, echo=FALSE, out.width="40%",out.height="30%",fig.cap="  ",fig.align='left'}
+knitr::include_graphics("img/Copyofcovidplot.jpg")
+```
+
 
 - In this lab we practiced data wrangling and visualization with real-time COVID-19 data
 - It includes an in-depth look at daily new case data as well as cumulative data at State and County levels
