--- a/catherinerauch.rmd
+++ b/catherinerauch.rmd
@@ -1,45 +1,8 @@
 ---
-title: "Catherine Rauch"
+title: ""
 output: html_document
 ---
 
-```{r setup, include=FALSE}
-knitr::opts_chunk$set(echo = TRUE)
+```{r, echo=FALSE, out.width="90%",out.height="90%",fig.cap="  ",fig.align='center'}
+knitr::include_graphics("img/resumescreenshot.png")
 ```
-
-<br>
-
-# Education
-
-- University of California at Santa Barbara (UCSB) **2019 - 2021**
-
-    Statistics and Data Science (BS) 
-
-- Santa Rosa Junior College (SRJC) **2017  - 2019**
-
-    Economics(AA-T), Business Administration(AS-T) and Mathematics(AS-T)
-
-<br>
-
-# Relevant Coursework/Experience
-
-### UCSB
-
-- PSTAT 195  DATA SCIENCE APPLICATIONS AND ANALYSIS
-
-    Use of Python in Jupyter Notebook (pandas, numpy, altair) for data retrieval, analysis, visualization, and report generation.
-
-- PSTAT 174 TIME SERIES
-
-    Use of R in examining, estimating, diagnostic checking, and forecasting of stationary/ non-stationary models including seasonal time series and ARMA models.
-    
-- PSTAT 126 REGRESSION ANALYSIS
-
-    Use of R in Linear and multiple regression, including analysis of residuals, transformations, and variable/model selection
-
-
-### SRJC
-
-- CS 61.11A/B	MS EXCEL
- 
-    Creating, editing, formatting Excel worksheets, workbooks, charts , web pages, using functions and formulas, macros and PivotTables/PivotCharts.
