--- a/index.Rmd
+++ b/index.Rmd
@@ -4,17 +4,37 @@ title: "About Me"
 
 `r library(icon)`
 
-<br>
-
 I'm in my last year pursuing a Bachelor’s Degree in Statistics and Data Science at the University of California at Santa Barbara (UCSB).  I am currently exploring a minor in [Spatial Studies](http://spatial.ucsb.edu/academic-minor/).
-<br>
 
+***
+
+Last summer, I took an R based GIS course (Geography 176A - Intro to Geographic Information Systems and Science). I worked on assignments that included: 
+
+- working with raw data to create updating tables and plots that breakdown Covid Case Data
+
+- extracting US census data  to analyzing the impacted populations at the US border zone 
+
+- completing a dam analysis to examine dam patterns in the US
+
+- implementing remote sensing based flood analysis
+
+- constructing a partial FIM library
+
+More info can be found [here](https://catherinerauch.github.io/geog176A.html).
+
+
+I am looking forward to using the skills learned in this class, including collecting and cleaning raw data, vector/raster data manipulation, creating/joining spatial data and objects, and geographical focused visualizations and tables, to create more spatial projects. Currently, I am using these newly learned skills to examine Oregon Wildfire Data.
+
+***
+
+In my free time I travel and like to take [photos](https://vsco.co/catttrauc/gallery). Born and raised in Northern California, I'm a big sports fan and religiously follow the San Jose Sharks. But, I can also be spotted at Warriors and Giants games.
+<br>
 
 ```{r, echo=FALSE, out.width="49%",out.height="20%",fig.cap="   ",fig.show='hold',fig.align='left'}
 knitr::include_graphics(c("img/OsakaCastle.jpg","img/JapaneseMaple.jpg"))
 ``` 
-In my free time I travel and like to take [photos](https://vsco.co/catttrauc/gallery). Born and raised in Northern California, I'm a big sports fan and religiously follow the San Jose Sharks. But, I can also be spotted at Warriors and Giants games.
-<br>
+
+
 
 I enjoy tailoring my projects to my interests, take a [look](https://catherinerauch.github.io/projects.html)!
 
