--- a/geog176A.Rmd
+++ b/geog176A.Rmd
@@ -1,10 +1,7 @@
 ---
 title: "GIS work"
 ---
-
-##### In summer 2020, I took an R based GIS course (Geography 176A - Intro to Geographic Information Systems and Science).
-
-Here is the collection of links for completed assignments: 
+***
 
 > ## [Creating a FIM with Flood Data from Mission Creek](https://catherinerauch.github.io/geog-176A-labs/lab-06.html)
 ```{r, echo=FALSE, out.width="40%",out.height="30%",fig.cap="  ",fig.align='left'}
@@ -15,7 +12,7 @@ knitr::include_graphics(c("img/lab06plot.png"))
 
 - This terrain data was prepped for analysis by aligning object and field data
 
-- Data was loaded into R using Web APIs and the whitebox frontend was used to create a partial Flood Inudation Map (FIM) with structural damage assessment.
+- Data was loaded into R using Web APIs and the whitebox frontend was used to create a partial Flood Inudation Map (FIM) with structural damage assessment
 
 
 ***
@@ -39,7 +36,9 @@ knitr::include_graphics("img/lab4plot.png")
 ```
 
 - In this lab we examined the impacts of different tessellated surfaces and the modifiable areal unit problem (MAUP) 
+
 - Point-in-polygon counts were calculated to aggregate point data and visualize the distribution of dams over the US
+
 - Functions were written to more efficiently report and map information
 
 ***
@@ -50,7 +49,9 @@ knitr::include_graphics("img/CopyofUSthememap.jpg")
 ```
 
 - In this lab we explored working with sf, sfc, and sfg features & objects
+
 - Coordinate transformations and calculations were made to visualize distances between cities and borders
+
 - Ggplot, gghighlight, and ggrepel were used to create graphics that are clear and interesting 
 
 ***
@@ -61,7 +62,9 @@ knitr::include_graphics("img/Copyofcovidplot.jpg")
 ```
 
 - In this lab we practiced data wrangling and visualization with real-time COVID-19 data
+
 - It includes an in-depth look at daily new case data as well as cumulative data at State and County levels
+
 - Pipes and other tidyverse tools were used to manipulate data and present it as legible tables and plots
 
 
@@ -70,7 +73,9 @@ knitr::include_graphics("img/Copyofcovidplot.jpg")
 > ## [Building a project website](https://github.com/catherinerauch/catherinerauch.github.io)
 
 - In this assignment we built a user site with GitHub
+
 - It includes a default page ('About Me') and a projects page (repo with access to code) 
+
 - Use of themes and icons on a webpage was explored
 
 
