--- a/index.Rmd
+++ b/index.Rmd
@@ -23,12 +23,12 @@ Assignments included:
 
 - constructing a partial FIM library
 
-More info can be found [here](https://catherinerauch.github.io/geog176A.html).
+More info can be found [here](https://catherinerauch.github.io/geog176A.html#past-work).
 
 
 I am looking forward to using the skills learned in this class, including collecting and cleaning raw data, vector/raster data manipulation, creating/joining spatial data and objects, and geographical focused visualizations and tables, to create more spatial projects. 
 
-Currently, I am [working](https://catherinerauch.github.io/geog176A.html) on a spatial regression analysis of Killer Whale Location Patterns.
+[Currently](https://catherinerauch.github.io/geog176A.html#current-work), I am working on a spatial regression analysis of Killer Whale Location Patterns.
 
 ***
 
