--- a/index.Rmd
+++ b/index.Rmd
@@ -6,11 +6,12 @@ title: "About Me"
 
 <br>
 
-I'm in my last year pursuing a Bachelor’s Degree in Statistics and Data Science at the University of California at Santa Barbara (UCSB).  I am currently exploring a minor in [Spatial Studies](http://spatial.ucsb.edu/academic-minor/).
+##### I'm in my last year pursuing a Bachelor’s Degree in Statistics and Data Science and a minor in [Spatial Studies](http://spatial.ucsb.edu/academic-minor/) at the University of California at Santa Barbara (UCSB).  
 
 ***
 
 Last summer, I took an R based GIS course (Geography 176A - Intro to Geographic Information Systems and Science). 
+
 Assignments included: 
 
 - working with raw data to create updating tables and plots that breakdown Covid-19 case data
@@ -23,19 +24,20 @@ Assignments included:
 
 - constructing a partial FIM library
 
-More info can be found [here](https://catherinerauch.github.io/geog176A.html#past-work).
+More info can be found [here](https://catherinerauch.github.io/geog176A.html#previous-work).
 
 
 I am looking forward to using the skills learned in this class, including collecting and cleaning raw data, vector/raster data manipulation, creating/joining spatial data and objects, and geographical focused visualizations and tables, to create more spatial projects. 
 
-[Currently](https://catherinerauch.github.io/geog176A.html#current-work), I am working on a spatial regression analysis of Killer Whale Location Patterns.
-
 ***
 
-In my free time I travel and like to take [photos](https://vsco.co/catttrauc/gallery). Born and raised in Northern California, I'm a big sports fan and religiously follow the San Jose Sharks. But, I can also be spotted at Warriors and Giants games. I enjoy tailoring my projects to my interests, take a [look](https://catherinerauch.github.io/projects.html)!
+##### [Currently](https://catherinerauch.github.io/geog176A.html#current-work), I am working on an analysis of Killer Whale Sighting Patterns.
 
-<br>
-```{r, echo=FALSE, out.width="50%",out.height="20%",fig.cap="   ",fig.show='hold',fig.align='center'}
+
+
+##### In my free time I travel and like to take [photos](https://vsco.co/catttrauc/gallery). Born and raised in Northern California, I'm a big sports fan and religiously follow the San Jose Sharks. But, I can also be spotted at Warriors and Giants games. I enjoy tailoring my projects to my interests, take a [look](https://catherinerauch.github.io/projects.html)!
+
+>```{r, echo=FALSE, out.width="50%",out.height="20%",fig.cap="   ",fig.show='hold',fig.align='center'}
 knitr::include_graphics(c("img/OsakaCastle.jpg","img/JapaneseMaple.jpg"))
 ``` 
 
