--- a/projects.Rmd
+++ b/projects.Rmd
@@ -4,18 +4,18 @@ title: "Projects"
 
 ***
 
-><center> ## Time Series Analysis and Forecast of Southern Resident Killer Whale Sightings
+><center> ## Time Series Analysis and Forecast of SRKWs Sightings
 [Report](docs/Catherine Rauch - 174 final project.html)
 ```{r, echo=FALSE, out.width="45%",out.height="20%",fig.cap="   ",fig.show='hold',fig.align='center'}
 knitr::include_graphics(c("img/killerwhales3.jpg", "img/whaleforecast.png"))
 ``` 
 </center>
 
-The goal of this report was to compile sighting data of the SRKW's in the Salish Sea, and to forecast future sightings. Raw data was compiled from [the Whale Museums' Hotline](https://hotline.whalemuseum.org/). A total of 16,722 southern resident observations were grouped by month from year 2008 to 2015. After appropriate transformation and differencing was applied, multiple SARIMA  models were fit and diagnostics preformed to choose the best. This model was then used to forecast the next 6 months of sightings.
+The goal of this report was to compile sighting data of the Southern Resident Killer Whales in the Salish Sea, and to forecast future sightings. Raw data was compiled from [the Whale Museums' Hotline](https://hotline.whalemuseum.org/). A total of 16,722 southern resident observations were grouped by month from year 2008 to 2015. After appropriate transformation and differencing was applied, multiple SARIMA  models were fit and diagnostics preformed to choose the best. This model was then used to forecast the next 6 months of sightings.
 
 ***
 
-><center> ## Exploratory Analysis of Shark Tank Data
+><center> ## Analysis of Shark Tank Data
 [Report](docs/RauchSharkTankReport.html)
 ```{r, echo=FALSE, out.width="49%",out.height="100%",fig.cap="   ",fig.show='hold',fig.align='center'}
 knitr::include_graphics(c("img/visualization (12).png", "img/visualization (10).png"))
@@ -34,3 +34,14 @@ knitr::include_graphics(c("img/mammaplot.png"))
 </center>
 
 This project investigates the link between brain/body weight, life span, gestation time, time spent sleeping/dreaming, and predation/danger indices for 62 species of mammals. The raw data was cleaned and relationships were explored in a scatterplot matrix. While attempting to determine which variables were significant in predicting time spent dreaming, high influence and leverage points were found and multiple models were fit before selecting the best with AIC. To predict total time spent dreaming step-wise regression was preformed.
+
+***
+
+><center> ## Exploratory Analysis of San Jose Traffic Accidents
+[Report](docs/project-final-report (1) (1).html)
+```{r, echo=FALSE, out.width="49%",out.height="100%",fig.cap="   ",fig.show='hold',fig.align='center'}
+knitr::include_graphics(c("img/Screenshot 2021-07-17 161146.png","img/Screenshot 2021-07-17 161119.png"))
+```
+</center>
+
+This project explores traffic data analysis to investigate how external variables interact with traffic accidents and to identify a pattern or hotspot, within traffic accident distributions. This was done by examining traffic accident data from 2020 reported in San Jose, California.
